<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="scan_barcode">Scan barcode</string>
    <string name="isbn_not_found">ISBN not found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="sample_book_title">Dune</string>
    <string name="no_internet">You have no internet connection, please reconnect and try again</string>
    <string name="isbn_length_warning">Check ISBN, number of digits is not equal to 13</string>
    <string name="sample_text">Here is the novel that will be forever considered a triumph of the imagination.\n\nSet on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, who would become the mysterious man known as Muad\'Dib. He would avenge the traitorous plot against his noble family—and would bring to fruition humankind\'s most ancient and unattainable dream.\n\nA stunning blend of adventure and mysticism, environmentalism and politics, Dune won the first Nebula Award, shared the Hugo Award, and formed the basis of what it undoubtedly the grandest epic in science fiction.</string>
    <string name="no_connection">Check your internet connection</string>
</resources>
