<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tool="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingRight="20dp"
                android:saveEnabled="true"/>

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"/>

        </LinearLayout>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:layout_marginTop="25dp"
            android:paddingRight="20dp"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold"
            tools:text="@string/sample_book_title"/>

        <TextView
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bookCover"
            android:layout_toEndOf="@+id/bookCover"
            android:layout_toRightOf="@+id/bookCover"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingLeft="10dp"
            tools:text="Science Fiction's Supreme Masterpiece"/>

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookSubTitle"
            android:layout_toEndOf="@+id/bookCover"
            android:layout_toRightOf="@+id/bookCover"
            android:gravity="end"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/small_fontsize"
            tools:text="Frank Hebert"/>

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bookTitle"
            android:layout_alignStart="@+id/bookTitle"
            android:layout_below="@+id/bookTitle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/book_cover"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:scaleType="fitXY"
            tools:src="@drawable/sample_book_cover"/>

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/authors"
            android:layout_toEndOf="@+id/bookCover"
            android:layout_toRightOf="@+id/bookCover"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/small_fontsize"
            tools:text="Science Fiction"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:visibility="invisible"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
