<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fullBookTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="0dp"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/head_line"
                    android:textStyle="bold"
                    tools:text="@string/sample_book_title"/>

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fullBookTitle"
                    android:layout_alignStart="@+id/fullBookTitle"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/book_cover"
                    android:maxHeight="150dp"
                    android:maxWidth="150dp"
                    android:scaleType="fitXY"
                    tools:src="@drawable/sample_book_cover"/>

                <TextView
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textSize="18sp"
                    tools:text="Science Fiction's Supreme Masterpiece"/>


                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:paddingTop="15dp"
                    tools:text="@string/sample_text"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|top"
                        tools:text="Science Fiction"/>

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|top"
                        android:textStyle="bold"
                        tools:text="Frank Hebert"/>
                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/delete"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
